--- a/data/testimonials.yaml
+++ b/data/testimonials.yaml
@@ -8,7 +8,7 @@
   process: "10 сессий когнитивно-поведенческой терапии, экспозиционная терапия — постепенное возвращение в пугающие ситуации"
   result: "Паники прекратились, вернулась на работу, начала путешествовать. Прошло 8 месяцев — рецидивов нет"
   timeline: "10 сессий, 2,5 месяца"
-  text: "Наталья научила меня конкретным техникам, которые работают. Больше всего помогла экспозиционная терапия. Теперь я знаю, что делать, если тревога появится снова."
+  text: "Ксения научила меня конкретным техникам, которые работают. Больше всего помогла экспозиционная терапия. Теперь я знаю, что делать, если тревога появится снова."
 
 - id: 2
   author_name: "Дмитрий, 28 лет"
@@ -26,7 +26,7 @@
   process: "15 сессий, экспозиция + когнитивная работа с убеждениями «я глупо выгляжу», «все осуждают»"
   result: "Выступила на конференции перед 50 людьми, повышение на работе, новые знакомства. Тревога есть, но управляемая (3/10 вместо 8/10)"
   timeline: "15 сессий, 4 месяца"
-  text: "Я думала, что социальная тревога — это навсегда. Наталья показала, что это можно изменить. Сейчас я живу полной жизнью, а не прячусь от людей."
+  text: "Я думала, что социальная тревога — это навсегда. Ксения показала, что это можно изменить. Сейчас я живу полной жизнью, а не прячусь от людей."
 
 - id: 4
   author_name: "Сергей, 35 лет"
@@ -35,7 +35,7 @@
   process: "14 сессий с экспозицией и предотвращением ритуалов (ЭПР)"
   result: "Ритуалы сократились на 80%, могу выходить из дома без многочасовых проверок. Жизнь вернулась"
   timeline: "14 сессий, 3,5 месяца"
-  text: "ОКР контролировало мою жизнь 5 лет. Экспозиционная терапия была непростой, но она работает. Наталья поддерживала меня на каждом этапе."
+  text: "ОКР контролировало мою жизнь 5 лет. Экспозиционная терапия была непростой, но она работает. Ксения поддерживала меня на каждом этапе."
 
 - id: 5
   author_name: "Мария, 29 лет"
@@ -53,7 +53,7 @@
   process: "12 сессий, постепенная экспозиция — сначала с терапевтом (онлайн поддержка в реальном времени), потом самостоятельно"
   result: "Через 3 месяца вернулась к обычной жизни — хожу в магазины, езжу на метро. Паники редкие (раз в 2-3 месяца), знаю, как справляться"
   timeline: "12 сессий, 3 месяца"
-  text: "Я была в отчаянии. Мне казалось, что я никогда не смогу жить нормально. Наталья доказала, что это возможно. Благодарна за терпение и профессионализм."
+  text: "Я была в отчаянии. Мне казалось, что я никогда не смогу жить нормально. Ксения доказала, что это возможно. Благодарна за терпение и профессионализм."
 
 - id: 7
   author_name: "Алексей, 44 года"
