--- a/data/testimonials.yaml
+++ b/data/testimonials.yaml
@@ -32,7 +32,7 @@
   author_name: "Сергей, 35 лет"
   problem: "Обсессивно-компульсивное расстройство"
   before_state: "Навязчивые мысли о загрязнении, мытьё рук 30+ раз в день, проверка дверных замков по 10 раз"
-  process: "14 сессий с экспозицией и предотвращением ритуалов (ЭПР)"
+  process: "14 сессий с экспозицией и предотвращением ритуалов"
   result: "Ритуалы сократились на 80%, могу выходить из дома без многочасовых проверок. Жизнь вернулась"
   timeline: "14 сессий, 3,5 месяца"
   text: "ОКР контролировало мою жизнь 5 лет. Экспозиционная терапия была непростой, но она работает. Ксения поддерживала меня на каждом этапе."
