--- a/netlify.toml
+++ b/netlify.toml
@@ -6,15 +6,25 @@
   HUGO_VERSION = "0.120.4"
   NODE_VERSION = "18"
 
+[context.production]
+  command = "hugo --gc --minify"
+
 [context.production.environment]
   HUGO_ENV = "production"
+  HUGO_ENVIRONMENT = "production"
   HUGO_ENABLEGITINFO = "true"
 
 [context.deploy-preview]
   command = "hugo --gc --minify --buildFuture -b $DEPLOY_PRIME_URL"
 
+[context.deploy-preview.environment]
+  HUGO_ENV = "production"
+
 [context.branch-deploy]
   command = "hugo --gc --minify -b $DEPLOY_PRIME_URL"
+
+[context.branch-deploy.environment]
+  HUGO_ENV = "production"
 
 [[headers]]
   for = "/*"
