--- a/config.toml
+++ b/config.toml
@@ -25,8 +25,8 @@ disableKinds = ["RSS", "taxonomy", "term"]
 # A/B Testing - Landing Page Variants
 [params.variants]
   enabled = true
-  list = ["a"]                   # Add "b", "c" as needed
-  weights = [100]                # Percentage weights, must sum to 100
+  list = ["a", "b"]              # Variant A (control) and B (challenger)
+  weights = [50, 50]             # 50/50 split for A/B test
   default = "a"                  # Default variant for fallback
   forceParam = "v"               # URL param to force variant: /?v=b
 
