--- a/data/testimonials.yaml
+++ b/data/testimonials.yaml
@@ -3,75 +3,75 @@
 # All stories published with client consent, names changed for privacy
 - id: 1
   author_name: "Анна, 32 года"
-  problem: "Панические атаки"
-  before_state: "Панические атаки 3-4 раза в неделю, боялась выходить из дома, ездить в метро"
-  process: "10 сессий когнитивно-поведенческой терапии, экспозиционная терапия — постепенное возвращение в пугающие ситуации"
-  result: "Паники прекратились, вернулась на работу, начала путешествовать. Прошло 8 месяцев — рецидивов нет"
-  timeline: "10 сессий, 2,5 месяца"
-  text: "Ксения научила меня конкретным техникам, которые работают. Больше всего помогла экспозиционная терапия. Теперь я знаю, что делать, если тревога появится снова."
+  problem: "Сильное беспокойство в транспорте"
+  before_state: "Сильное беспокойство, из-за которого было сложно пользоваться общественным транспортом"
+  process: "Работа в КПТ-подходе, постепенное возвращение к привычным действиям и тренировка навыков саморегуляции"
+  result: "Стало значительно проще справляться с тревогой в поездках. Анна вернулась к активному образу жизни, снова пользуется метро и планирует поездки"
+  timeline: "10 встреч"
+  text: "Ксения научила меня конкретным техникам, которые работают. Теперь я знаю, что делать, если тревога снова напомнит о себе"
 
 - id: 2
   author_name: "Дмитрий, 28 лет"
-  problem: "Генерализованное тревожное расстройство"
-  before_state: "Постоянная тревога о работе, здоровье, отношениях, бессонница"
-  process: "12 сессий КПТ, техники когнитивной реструктуризации (изменение катастрофических мыслей), релаксация"
-  result: "Уровень тревоги снизился с 9/10 до 2/10, сон наладился, перестал накручивать себя"
-  timeline: "12 сессий, 3 месяца"
-  text: "Раньше я постоянно думал о худшем. Терапия помогла мне увидеть, что большинство моих страхов — это просто мысли, а не реальность. Спасибо за возвращённое спокойствие."
+  problem: "Постоянные тревожные мысли"
+  before_state: "Постоянные тревожные мысли о работе и будущем, сложности с засыпанием"
+  process: "Работа с автоматическими мыслями, техники когнитивной реструктуризации и практики для улучшения качества сна"
+  result: "Уровень повседневного беспокойства заметно снизился. Дмитрий стал быстрее засыпать, перестал «накручивать» себя по вечерам и чувствует себя спокойнее"
+  timeline: "12 встреч"
+  text: "Терапия помогла мне увидеть, что большинство моих страхов — это просто мысли, а не реальность. Спасибо за возвращённое спокойствие"
 
 - id: 3
   author_name: "Екатерина, 41 год"
-  problem: "Социальная тревога"
-  before_state: "Страх публичных выступлений, совещаний, разговоров с незнакомыми. Избегала мероприятий, упускала карьерные возможности"
-  process: "15 сессий, экспозиция + когнитивная работа с убеждениями «я глупо выгляжу», «все осуждают»"
-  result: "Выступила на конференции перед 50 людьми, повышение на работе, новые знакомства. Тревога есть, но управляемая (3/10 вместо 8/10)"
-  timeline: "15 сессий, 4 месяца"
-  text: "Я думала, что социальная тревога — это навсегда. Ксения показала, что это можно изменить. Сейчас я живу полной жизнью, а не прячусь от людей."
+  problem: "Волнение перед выступлениями"
+  before_state: "Сильное волнение перед публичными выступлениями и совещаниями, избегание внимания"
+  process: "Работа с убеждениями о себе и постепенная практика уверенного поведения в рабочих ситуациях"
+  result: "Выступила на конференции, стала активнее проявлять себя на работе и получила предложение о повышении. Тревога стала управляемой"
+  timeline: "15 встреч"
+  text: "Я думала, что это навсегда. Ксения показала, что это можно изменить. Сейчас я живу полной жизнью, а не прячусь от людей"
 
 - id: 4
   author_name: "Сергей, 35 лет"
-  problem: "Обсессивно-компульсивное расстройство"
-  before_state: "Навязчивые мысли о загрязнении, мытьё рук 30+ раз в день, проверка дверных замков по 10 раз"
-  process: "14 сессий с экспозицией и предотвращением ритуалов"
-  result: "Ритуалы сократились на 80%, могу выходить из дома без многочасовых проверок. Жизнь вернулась"
-  timeline: "14 сессий, 3,5 месяца"
-  text: "ОКР контролировало мою жизнь 5 лет. Экспозиционная терапия была непростой, но она работает. Ксения поддерживала меня на каждом этапе."
+  problem: "Навязчивые мысли и действия"
+  before_state: "Навязчивые мысли и повторяющиеся действия, которые отнимали много времени и сил"
+  process: "Работа по методу КПТ, направленная на снижение контроля и постепенный отказ от привычных ритуалов"
+  result: "Удалось значительно сократить время на проверки и навязчивые действия. Сергей стал чувствовать себя свободнее и увереннее в повседневных делах"
+  timeline: "14 встреч"
+  text: "Работа была непростой, но она дает плоды. Ксения поддерживала меня на каждом этапе, и теперь я могу выходить из дома без лишних проверок"
 
 - id: 5
   author_name: "Мария, 29 лет"
   problem: "Стресс и профессиональное выгорание"
   before_state: "Работа 12 часов в день, хроническая усталость, раздражительность, потеря мотивации"
-  process: "8 сессий, фокус на управлении стрессом, границах, ценностях"
+  process: "8 встреч, фокус на управлении стрессом, границах, ценностях"
   result: "Сменила работу, научилась говорить «нет», появилось время для себя. Энергия вернулась"
-  timeline: "8 сессий, 2 месяца"
-  text: "Я не понимала, что выгорание — это серьёзно. Терапия помогла мне пересмотреть приоритеты и вернуть баланс в жизнь."
+  timeline: "8 встреч"
+  text: "Я не понимала, что выгорание — это серьёзно. Терапия помогла мне пересмотреть приоритеты и вернуть баланс в жизнь"
 
 - id: 6
   author_name: "Ольга, 38 лет"
-  problem: "Панические атаки + агорафобия"
-  before_state: "Панические атаки в магазинах, транспорте. Год не ходила в магазины одна"
-  process: "12 сессий, постепенная экспозиция — сначала с терапевтом (онлайн поддержка в реальном времени), потом самостоятельно"
-  result: "Через 3 месяца вернулась к обычной жизни — хожу в магазины, езжу на метро. Паники редкие (раз в 2-3 месяца), знаю, как справляться"
-  timeline: "12 сессий, 3 месяца"
-  text: "Я была в отчаянии. Мне казалось, что я никогда не смогу жить нормально. Ксения доказала, что это возможно. Благодарна за терпение и профессионализм."
+  problem: "Тревога в людных местах"
+  before_state: "Ощущение сильной тревоги в людных местах, из-за чего было сложно ходить в магазины одной"
+  process: "Постепенное расширение зоны комфорта, онлайн-поддержка и освоение техник стабилизации в моменте"
+  result: "Ольга снова самостоятельно ходит за покупками и пользуется транспортом. Тревога возникает редко, и теперь есть понимание, как с ней справляться"
+  timeline: "12 встреч"
+  text: "Я была в отчаянии, но Ксения доказала, что изменения возможны. Благодарна за терпение и профессионализм"
 
 - id: 7
   author_name: "Алексей, 44 года"
   problem: "Тревога и бессонница"
   before_state: "Засыпал по 2-3 часа, постоянные мысли о работе и финансах, раздражительность"
-  process: "10 сессий, техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна"
-  result: "Засыпаю за 20 минут, сон стал крепким, уровень тревоги снизился с 7/10 до 3/10"
-  timeline: "10 сессий, 2,5 месяца"
-  text: "Я не спал нормально 3 года. Думал, это возраст. Оказалось, что это тревога. Теперь высыпаюсь, и жизнь стала проще."
+  process: "10 встреч, техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна"
+  result: "Засыпает за 20 минут, сон стал крепким, уровень тревоги заметно снизился"
+  timeline: "10 встреч"
+  text: "Я не спал нормально 3 года. Думал, это возраст. Оказалось, что это тревога. Теперь высыпаюсь, и жизнь стала проще"
 
 - id: 8
   author_name: "Виктория, 26 лет"
   problem: "Страх неопределённости, постоянное беспокойство"
   before_state: "Не могла принимать решения, переживала о будущем, избегала перемен"
-  process: "9 сессий, работа с толерантностью к неопределённости, техники осознанности"
+  process: "9 встреч, работа с толерантностью к неопределённости, техники осознанности"
   result: "Приняла решение о смене города и работы, перестала бояться изменений, научилась жить в моменте"
-  timeline: "9 сессий, 2 месяца"
-  text: "Раньше я боялась любых изменений. Терапия помогла мне понять, что неопределённость — это нормально, и её можно принять."
+  timeline: "9 встреч"
+  text: "Раньше я боялась любых изменений. Терапия помогла мне понять, что неопределённость — это нормально, и её можно принять"
 
 # Note: All testimonials follow the format «До/Запрос → Процесс → Результат/Сроки»
 # Russian typography is correct: quotes «», dashes —, nbsp before units
