--- a/data/testimonials.yaml
+++ b/data/testimonials.yaml
@@ -7,7 +7,7 @@
   before_state: "Сильное беспокойство, из-за которого было сложно пользоваться общественным транспортом"
   process: "Работа в КПТ-подходе, постепенное возвращение к привычным действиям и тренировка навыков саморегуляции"
   result: "Стало значительно проще справляться с тревогой в поездках. Анна вернулась к активному образу жизни, снова пользуется метро и планирует поездки"
-  timeline: "10 встреч"
+  timeline: "Курс работы"
   text: "Ксения научила меня конкретным техникам, которые работают. Теперь я знаю, что делать, если тревога снова напомнит о себе"
 
 - id: 2
@@ -16,7 +16,7 @@
   before_state: "Постоянные тревожные мысли о работе и будущем, сложности с засыпанием"
   process: "Работа с автоматическими мыслями, техники когнитивной реструктуризации и практики для улучшения качества сна"
   result: "Уровень повседневного беспокойства заметно снизился. Дмитрий стал быстрее засыпать, перестал «накручивать» себя по вечерам и чувствует себя спокойнее"
-  timeline: "12 встреч"
+  timeline: "Курс работы"
   text: "Терапия помогла мне увидеть, что большинство моих страхов — это просто мысли, а не реальность. Спасибо за возвращённое спокойствие"
 
 - id: 3
@@ -25,7 +25,7 @@
   before_state: "Сильное волнение перед публичными выступлениями и совещаниями, избегание внимания"
   process: "Работа с убеждениями о себе и постепенная практика уверенного поведения в рабочих ситуациях"
   result: "Выступила на конференции, стала активнее проявлять себя на работе и получила предложение о повышении. Тревога стала управляемой"
-  timeline: "15 встреч"
+  timeline: "Курс работы"
   text: "Я думала, что это навсегда. Ксения показала, что это можно изменить. Сейчас я живу полной жизнью, а не прячусь от людей"
 
 - id: 4
@@ -34,7 +34,7 @@
   before_state: "Навязчивые мысли и повторяющиеся действия, которые отнимали много времени и сил"
   process: "Работа по методу КПТ, направленная на снижение контроля и постепенный отказ от привычных ритуалов"
   result: "Удалось значительно сократить время на проверки и навязчивые действия. Сергей стал чувствовать себя свободнее и увереннее в повседневных делах"
-  timeline: "14 встреч"
+  timeline: "Курс работы"
   text: "Работа была непростой, но она дает плоды. Ксения поддерживала меня на каждом этапе, и теперь я могу выходить из дома без лишних проверок"
 
 - id: 5
@@ -43,7 +43,7 @@
   before_state: "Работа 12 часов в день, хроническая усталость, раздражительность, потеря мотивации"
   process: "8 встреч, фокус на управлении стрессом, границах, ценностях"
   result: "Сменила работу, научилась говорить «нет», появилось время для себя. Энергия вернулась"
-  timeline: "8 встреч"
+  timeline: "Курс работы"
   text: "Я не понимала, что выгорание — это серьёзно. Терапия помогла мне пересмотреть приоритеты и вернуть баланс в жизнь"
 
 - id: 6
@@ -52,7 +52,7 @@
   before_state: "Ощущение сильной тревоги в людных местах, из-за чего было сложно ходить в магазины одной"
   process: "Постепенное расширение зоны комфорта, онлайн-поддержка и освоение техник стабилизации в моменте"
   result: "Ольга снова самостоятельно ходит за покупками и пользуется транспортом. Тревога возникает редко, и теперь есть понимание, как с ней справляться"
-  timeline: "12 встреч"
+  timeline: "Курс работы"
   text: "Я была в отчаянии, но Ксения доказала, что изменения возможны. Благодарна за терпение и профессионализм"
 
 - id: 7
@@ -60,8 +60,8 @@
   problem: "Тревога и бессонница"
   before_state: "Засыпал по 2-3 часа, постоянные мысли о работе и финансах, раздражительность"
   process: "10 встреч, техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна"
-  result: "Засыпает за 20 минут, сон стал крепким, уровень тревоги заметно снизился"
-  timeline: "10 встреч"
+  result: "Стало значительно легче засыпать, сон стал более крепким, уровень тревоги заметно снизился"
+  timeline: "Курс работы"
   text: "Я не спал нормально 3 года. Думал, это возраст. Оказалось, что это тревога. Теперь высыпаюсь, и жизнь стала проще"
 
 - id: 8
@@ -70,7 +70,7 @@
   before_state: "Не могла принимать решения, переживала о будущем, избегала перемен"
   process: "9 встреч, работа с толерантностью к неопределённости, техники осознанности"
   result: "Приняла решение о смене города и работы, перестала бояться изменений, научилась жить в моменте"
-  timeline: "9 встреч"
+  timeline: "Курс работы"
   text: "Раньше я боялась любых изменений. Терапия помогла мне понять, что неопределённость — это нормально, и её можно принять"
 
 # Note: All testimonials follow the format «До/Запрос → Процесс → Результат/Сроки»
