--- a/data/testimonials.yaml
+++ b/data/testimonials.yaml
@@ -41,7 +41,7 @@
   author_name: "Мария, 29 лет"
   problem: "Стресс и профессиональное выгорание"
   before_state: "Работа 12 часов в день, хроническая усталость, раздражительность, потеря мотивации"
-  process: "8 встреч, фокус на управлении стрессом, границах, ценностях"
+  process: "фокус на управлении стрессом, границах, ценностях"
   result: "Сменила работу, научилась говорить «нет», появилось время для себя. Энергия вернулась"
   timeline: "Курс работы"
   text: "Я не понимала, что выгорание — это серьёзно. Терапия помогла мне пересмотреть приоритеты и вернуть баланс в жизнь"
@@ -59,7 +59,7 @@
   author_name: "Алексей, 44 года"
   problem: "Тревога и бессонница"
   before_state: "Засыпал по 2-3 часа, постоянные мысли о работе и финансах, раздражительность"
-  process: "10 встреч, техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна"
+  process: "техники релаксации, когнитивная работа с тревожными мыслями, гигиена сна"
   result: "Стало значительно легче засыпать, сон стал более крепким, уровень тревоги заметно снизился"
   timeline: "Курс работы"
   text: "Я не спал нормально 3 года. Думал, это возраст. Оказалось, что это тревога. Теперь высыпаюсь, и жизнь стала проще"
