--- a/data/testimonials.yaml
+++ b/data/testimonials.yaml
@@ -68,10 +68,9 @@
   author_name: "Виктория, 26 лет"
   problem: "Страх неопределённости, постоянное беспокойство"
   before_state: "Не могла принимать решения, переживала о будущем, избегала перемен"
-  process: "9 встреч, работа с толерантностью к неопределённости, техники осознанности"
+  process: "работа с толерантностью к неопределённости, техники осознанности"
   result: "Приняла решение о смене города и работы, перестала бояться изменений, научилась жить в моменте"
   timeline: "Курс работы"
   text: "Раньше я боялась любых изменений. Терапия помогла мне понять, что неопределённость — это нормально, и её можно принять"
-
 # Note: All testimonials follow the format «До/Запрос → Процесс → Результат/Сроки»
 # Russian typography is correct: quotes «», dashes —, nbsp before units
