--- a/data/case-studies.yaml
+++ b/data/case-studies.yaml
@@ -8,7 +8,7 @@
 # Will be rewritten in safe format after main content updates are complete
 
 # - id: 1
-#   title: "Панические атаки → Полное купирование за 10 сессий"
+#   title: "Сильная тревога → Полное купирование за 10 сессий"
 #   ...
 
 # - id: 2
